# blackroad-os-quantum

./: .gitignore  ADVANCED_TUTORIALS.md  AGENTS.md  ALGORITHM_LIBRARY.md  API_DOCUMENTATION.md  BLOCH_WINK_README.md  CHANGELOG.md  COMPARISON_MATRIX.md  CONTRIBUTING.md  COURSE_CURRICULUM.md  DOMINANCE.md  GETTING_STARTED.md  HONEST_PERFORMANCE_ANALYSIS.md  LICENSE  MANIFESTO.md  MATHEMATICAL_UNIVERSE_FRAMEWORK.md  NOTICE  PRESS_RELEASE.md  PRODUCTION_READINESS.md  PROJECT_SUMMARY.md  QUANTUM_MEMORY_ARCHITECTURE.md  QUANTUM_MEMORY_QUICKSTART.md  README.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v3.1.0.md  SESSION_2_SUMMARY.md  TUTORIALS.md  VICTORY.md  health.json  multi_pi_quantum_network.py  pyproject.toml  quantum_cluster_balancer.py  quantum_memory.py  quantum_memory_demo.py  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml
api/: README.md  quantum_api.py  quantum_memory_api.py
benchmarks/: final_showdown_all_frameworks.py  ultimate_quantum_showdown.py  vs_all_quantum_companies.py  vs_competition.py
bloche/: blackroad_algorithms.py  blackroad_quantum.py  blackroad_quantum_core.py  bloche.py  bloche_ultimate.py
cloudflare/: quantum-memory-worker.js  wrangler.toml
dashboard/: bloch-sphere.html  circuit-builder.html  entanglement.html  entropy-explorer.html  error-correction.html  fractals-chaos.html  index.html  magic-matrices.html  mathematical-universe.html  quantum-algorithms.html  quantum-cluster-dashboard.html  quantum-dashboard.html  quantum-games.html  quantum-music.html  riemann-explorer.html  shor-qft.html  vqe-qaoa.html  wave-function.html
data/: MATRIX_CRACKED.json  MULTI_PI_NETWORK.json  PHOTON_QUANTUM_REAL.json  atomic_fibonacci_137.json  chi_squared_riemann.json  np_vs_p_satoshi.json  partition_pixel_encoding.json  partition_satoshi_map.json  riemann_pixel_image.json  unified_satoshi_planck_riemann.json
data/results/: fibonacci_spiral_1767572606.json  heisenberg_uncertainty_1767572622.json  mandelbrot_zoom_1767572622.json  penrose_frequencies_1767572622.json  quantum_tunneling_1767572622.json  ramanujan_radicals_1767572606.json  riemann_zeros_1767572606.json
examples/: 01_hello_quantum.py  02_real_hardware.py  03_grover_search.py  04_all_algorithms.py
experiments/: 01_distributed_entanglement.py  02_quantum_speedup.py  03_qudit_systems.py  04_geometric_quantum.py  05_infinite_qudit_cascade.py  06_quantum_chaos_theory.py  07_hyperdimensional_quantum.py  08_quantum_entanglement_networks.py  09_quantum_error_correction.py  10_quantum_machine_learning.py  equation_explorer.py  photon_quantum_real.py
theory/: avogadro_fibonacci_137.py  chi_squared_riemann_connection.py  information_theory_quantum.py  np_p_satoshi_crack.py  partition_satoshi_quantum.py
unification/: matrix_cracked.py  satoshi_planck_riemann.py
web/: api-playground.html  circuit-builder.html  demo.html  index.html  index.html.backup  quantum-supremacy.html  ultimate-results.html
